--- a/Animation.html
+++ b/Animation.html
@@ -11,8 +11,15 @@
                 }
             
             @keyframes Anime1 {
-                from {background-color: aqua;}
-                to {background-color: blue;}
+
+                /* from {background-color: aqua;}
+                to {background-color: blue;} */
+
+                0% {background-color: aqua;}
+                25% {background-color: blue;}
+                50% {background-color: grey;}
+                75% {background-color: goldenrod;}
+                100% {background-color: salmon;}
             }
         </style>
     </head>
