--- a/Animation.html
+++ b/Animation.html
@@ -9,6 +9,8 @@
                     animation-name: Anime1;
                     animation-duration: 4s;
                     position: relative;
+                    animation-iteration-count: infinite;
+                    animation-direction: alternate;
                 }
             
             @keyframes Anime1 {
