--- a/2DAnimation.html
+++ b/2DAnimation.html
@@ -3,21 +3,28 @@
         <title>2D Animation</title>
         <style>
             div{
-                height: 300px;
+                height: 200px;
                 width: 600px;
                 background-color: chocolate;
                 border: 5px solid black;
             }
 
-            div#mydiv{
+            #mydiv{
                 transform: rotate(20deg);
+                background-color: darkgoldenrod;
+            }
+            
+            #div{
+                transform: rotate(-20deg);
+                background-color: aqua;
             }
 
         </style>
     </head>
 
     <body>
-        <div>My First Animation</div>
-        <div id="mydiv">My Second Animation</div>
+        <div>box 1</div>
+        <div id="mydiv">Box 2</div>
+        <div id="div">box 3</div>
     </body>
 </html>
